unpackaged/main/default/objects/Lead_Distribution_Rule_Criteria__c/Lead_Distribution_Rule_Criteria__c.object-meta.xml
<CustomObject>
    <label>Lead Distribution Rule Criteria</label>
    <nameField>
        <displayFormat>LDRC-{0000}</displayFormat>
        <label>Lead Distribution Rule Criteria Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lead Distribution Rule Criterias</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>