unpackaged/main/default/objects/Lead_Distribution_Rule_Criteria__c/fields/Field__c.field-meta.xml
<CustomField>
    <fullName>Field__c</fullName>
    <label>Field</label>
    <length>150</length>
    <type>Text</type>
</CustomField>