unpackaged/main/default/objects/Lead_Distribution_Rule_Criteria__c/fields/Is_Not_Supported_SubQuery__c.field-meta.xml
<CustomField>
    <fullName>Is_Not_Supported_SubQuery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Not Supported Sub Query</label>
    <type>Checkbox</type>
</CustomField>