unpackaged/main/default/objects/Lead_Distribution_Rule_Criteria__c/fields/IsSubQuery__c.field-meta.xml
<CustomField>
    <fullName>IsSubQuery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Sub Query</label>
    <type>Checkbox</type>
</CustomField>