unpackaged/main/default/objects/Lead_Distribution_Rule_Criteria__c/fields/Lead_Distribution_Rule__c.field-meta.xml
<CustomField>
    <fullName>Lead_Distribution_Rule__c</fullName>
    <label>Lead Distribution Rule</label>
    <referenceTo>LeadDistributionRule__c</referenceTo>
    <relationshipLabel>Lead Distribution Rule Criterias</relationshipLabel>
    <relationshipName>Lead_Distribution_Rule_Criterias</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>