unpackaged/main/default/objects/Lead_Distribution_Rule_Criteria__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>=</fullName>
                <label>Equals</label>
            </value>
            <value>
                <fullName>!=</fullName>
                <label>Not equal to</label>
            </value>
            <value>
                <fullName>&lt;</fullName>
                <label>Less than</label>
            </value>
            <value>
                <fullName>&lt;=</fullName>
                <label>Less than or equal to</label>
            </value>
            <value>
                <fullName>&gt;</fullName>
                <label>Greater than</label>
            </value>
            <value>
                <fullName>&gt;=</fullName>
                <label>Greater than or equal to</label>
            </value>
            <value>
                <fullName>LIKE</fullName>
                <label>Contains</label>
            </value>
            <value>
                <fullName>In</fullName>
            </value>
            <value>
                <fullName>Not In</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>