unpackaged/main/default/objects/Lead_Distribution_Rule_Criteria__c/fields/SubQuery__c.field-meta.xml
<CustomField>
    <fullName>SubQuery__c</fullName>
    <label>Sub Query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>