unpackaged/main/default/objects/Lead_Distribution_Rule_Criteria__c/fields/SubQuery_Field__c.field-meta.xml
<CustomField>
    <fullName>SubQuery_Field__c</fullName>
    <label>Sub Query Field</label>
    <length>155</length>
    <type>Text</type>
</CustomField>